# advanced_llm_ops_cursor_v2

./: .gitignore  .latexmkrc  BOOK_RULES_COMPLIANCE_REPORT.txt  CHAPTER_COMPLIANCE_PLAN.md  CITATION_VERIFICATION_REPORT.txt  CLAUDE.md  COMPLIANCE_FIX_PLAN.md  COMPLIANCE_STATUS_SUMMARY.md  FINAL_COMPLIANCE_REPORT.txt  INVESTIGATION_PLAN_FLOAT_PLACEMENT.md  Makefile  README.md  book.bbl-SAVE-ERROR  book.bcf-SAVE-ERROR  book.synctex(busy)  book.tex  ch01-intro-ishar.tex  ch02-llmops-fundamentals.tex  ch03-infra-env.tex  ch04-cicd.tex  ch05-observability.tex  ch06-scaling.tex  ch07-performance.tex  ch08-rag.tex  ch09-agents-orchestration.tex  ch10-testing-eval.tex  ch11-ethics.tex  ch12-ishtar-end-to-end.tex  latexmkrc.tex  macros.tex  paper_spec.md  pyproject.toml  references.bib  sync-overleaf.sh  texguardian.yaml
.claude/: settings.local.json
.cursor/: workspace.json
_minted/: 008CE53E109303DEBC50CD4E1529ECDC.highlight.minted  050495AEF402C22A39E3571F1D4A7009.highlight.minted  08AE32475629FE36E0AC28408561F9D7.highlight.minted  097341564089D652FA832791E3DEE386.highlight.minted  0A2D78DE9A0BC0D9FE2B724E61024442.highlight.minted  23AC823B335AB7973E939958DC5D367F.highlight.minted  24A29BB60DC0AEF232E0E1F5B2379289.highlight.minted  2C669FA3CE270A1E2C2D7A4C5C2D0A31.highlight.minted  366D5A03A4BEE405C602C7BD9816E46B.highlight.minted  3C077C98F9CCDD4C28B3694B01AF3E39.highlight.minted  42CC1C54F735E7A4387E509A6D669809.highlight.minted  45C8D38A031119FDB7B6BFEBCC115C93.highlight.minted  486E6E9615AEF222E48C7BF7A20918D1.highlight.minted  (+64 more)
advanced_llm_ops_v2/: __init__.py
(+51 files in other folders)
