[tool.poetry]
name = "advanced-llm-ops-cursor-v2"
version = "0.1.0"
description = "Advanced LLM operations"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "advanced_llm_ops_v2"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
